@@ -26,6 +26,7 @@ Other features
  * Added meta tag to prevent search engines from indexing admin pages (Karl Hobley)
  * EmbedBlock now validates against recognised embed providers on save (Bertrand Bordage)
  * Made cache control headers on Wagtail admin consistent with Django admin (Tomasz Knapik)
+ * Notification emails now include an "Auto-Submitted: auto-generated" header (Dan Braghis)
 
 
 Bug fixes
